--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -5,8 +5,8 @@
 <body> 
 <tr>
   <th> ID </th>
-  <th> Customer-ID </th>
   <th> Status </th>
+  <th> Customer-ID </th>
   <th> Name </th>
   <th> Email </th>
   
@@ -14,8 +14,8 @@
 <% @subscriptions.each do |subscription|%> 
 <tr>
   <td> <%= subscription.subscription_id %> </td>
+  <td> <strong> <%= subscription.status %> </strong></td>
   <td> <%= subscription.customer_id %> </td>
-    <td> <%= subscription.status %> </td>
   <td> <%= subscription.customer_name %> </td>
   <td> <%= subscription.customer_email %> </td>
 
